# DronePoseLib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  example.cpp  example_ransac.cpp
.github/workflows/: codeql.yml
cmake_modules/: CodeCoverage.cmake
includes/DronePoseLib/: get_valtonenornhag_arxiv_2021.hpp  relpose.hpp
matlab/: compile_mex.m  test_noise_sensitivity_realistic.m  test_numerical_stability_our_fEf_no_rot_3pt.m  test_numerical_stability_our_frEfr_no_rot_4pt.m  test_numerical_stability_our_rEr_no_rot_3pt.m
matlab/helpers/: compare_to_gt.m  generate_points.m  generate_points_realistic.m  normalise2dpts.m  pflat.m  radialdistort.m  radialundistort.m  rotm.m  skew.m
matlab/solvers/: get_fEf_no_rot_wrapper.m  get_frEfr_no_rot_wrapper.m
matlab/src/: get_valtonenornhag_arxiv_2021_fEf_mex.cpp  get_valtonenornhag_arxiv_2021_frEfr_mex.cpp  get_valtonenornhag_arxiv_2021_rEr_mex.cpp
src/helpers/: distortion.cpp  distortion.hpp  normalize2dpts.cpp  normalize2dpts.hpp  quartic.cpp  quartic.hpp  radial.cpp  radial.hpp  scene_and_pose_generation.cpp  scene_and_pose_generation.hpp  triangulate.cpp  triangulate.hpp
src/ransac/: pose_estimator.hpp  radialpose.h  ransac_estimator.hpp  ransac_valtonenornhag_arxiv_2021.cpp  ransac_valtonenornhag_arxiv_2021.hpp  refinement.cpp  refinement.hpp  valtonenornhag_arxiv_2021.cpp
src/solvers/valtonenornhag_arxiv_2021/fEf/: get_fEf.cpp
src/solvers/valtonenornhag_arxiv_2021/frEfr/: coeffs_frEfr.cpp  coeffs_frEfr.hpp  coeffs_frEfr_compact.cpp  get_frEfr.cpp  solver_frEfr.cpp  solver_frEfr.hpp
tests/: test_helpers.cpp  test_main.cpp  test_ransac.cpp  test_valtonenornhag_arxiv_2021.cpp
tests/catch2/: catch.hpp
(+1 files in other folders)
